--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
 <h1>KRATOS</h1>
 <h1>Cristian Yara</h1>
 <h1>fffffffffffffffffffff</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Colores en Texto HTML</title>
+</head>
+<body>
+
+<p style="color: blue;">Este texto es de color azul.</p>
+<p style="color: #ff0000;">Este texto es de color rojo (usando código hexadecimal).</p>
+<p style="color: rgb(0, 255, 0);">Este texto es de color verde (usando RGB).</p>
+<p style="color: hsl(120, 100%, 50%);">Este texto es de color verde (usando HSL).</p>
+
+</body>
+</html>
+
