--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Formulario Simple</title>
+</head>
+<body>
+
+    <form>
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required>
+
+        <label for="apellido">Apellido:</label>
+        <input type="text" id="apellido" name="apellido" required>
+
+        <button type="submit">Enviar</button>
+    </form>
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
     <title>Colores en Texto HTML</title>
 </head>
 <body>
